Lagd ferdig flipCards

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -156,23 +156,87 @@ INNOVATE.<br>
 
                     <div class="flipCard1">
                         <div class="flipCardInner1">
-                                <div class="cards11">
+                                <div class="cards1">
                                     <i class="cards fas fa-briefcase"><br>Business &<br>Innovation</i>
                                 </div>
                                 <div class="baksideFlip1">
                                     <p class="overskriftFlipCard">Business & Innovation</p>
-                                    <i class="fas fa-plus">Business Technology</i>
-                                    <i class="fas fa-plus">Technology Innovation (MS)</i>
-                                    <i class="fas fa-plus">Technology Leadership (MS)</i>
-                                    <i class="fas fa-plus">Technology Studies</i>
+                                        <i class="fas fa-plus">Business Technology</i>
+                                        <i class="fas fa-plus">Technology Innovation (MS)</i>
+                                        <i class="fas fa-plus">Technology Leadership (MS)</i>
+                                        <i class="fas fa-plus">Technology Studies</i>
                                 </div>
                         </div>
                     </div>
-                    <div class="cards21"> <i class="cards fas fa-user-plus"><br>Creation &<br>Simulation</i> </div>
-                    <div class="cards22"> <i class="cards fas fa-shield-alt"><br>Cyber<br>Security</i> </div>
-                    <div class="cards12"> <i class="cards fas fa-palette"><br>Digital<br>Arts</i> </div>
-                    <div class="cards13"> <i class="cards fas fa-gamepad"><br>Game<br>Studies</i> </div>
-                    <div class="cards23"> <i class="cards fas fa-cogs"><br>Software<br>Engineering</i> </div>
+                    <div class="flipCard2">
+                        <div class="flipCardInner2">
+                            <div class="cards2">
+                                <i class="cards fas fa-user-plus"><br>Creation &<br>Simulation</i>
+                            </div>
+                            <div class="baksideFlip1">
+                                <p class="overskriftFlipCard">Creation & Simulation</p>
+                                    <i class="fas fa-plus">Digital Maker & Fabrication</i>
+                                    <i class="fas fa-plus">Human Computer Interaction</i>
+                                    <i class="fas fa-plus">Robotic & Embedded Systems</i>
+                                    <i class="fas fa-plus">Virtual Reality</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flipCard3">
+                        <div class="flipCardInner3">
+                            <div class="cards2">
+                                <i class="cards fas fa-unlock-alt"><br>Cyber<br>Security</i>
+                            </div>
+                            <div class="baksideFlip1">
+                                <p class="overskriftFlipCard">Cyber Security</p>
+                                    <i class="fas fa-plus">Cyber Security (MS)</i>
+                                    <i class="fas fa-plus">Network Engineering</i>
+                                    <i class="fas fa-plus">Network Security</i>
+                                    <i class="fas fa-plus">Technology Forensics</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flipCard4">
+                        <div class="flipCardInner4">
+                            <div class="cards1">
+                                <i class="cards fas fa-palette"><br>Digital<br>Arts</i>
+                            </div>
+                            <div class="baksideFlip1">
+                                <p class="overskriftFlipCard">Digital Arts</p>
+                                    <i class="fas fa-plus">Advertising Art</i>
+                                    <i class="fas fa-plus">Digital Marketing</i>
+                                    <i class="fas fa-plus">Digital Video</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flipCard5">
+                        <div class="flipCardInner5">
+                            <div class="cards1">
+                                <i class="cards fas fa-gamepad"><br>Game<br>Studies</i>
+                            </div>
+                            <div class="baksideFlip1">
+                                <p class="overskriftFlipCard">Game Studies</p>
+                                    <i class="fas fa-plus">Game Art & Animation</i>
+                                    <i class="fas fa-plus">Game Design</i>
+                                    <i class="fas fa-plus">Game Production (MS)</i>
+                                    <i class="fas fa-plus">Game Programming</i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flipCard6">
+                        <div class="flipCardInner6">
+                            <div class="cards2">
+                                <i class="cards fas fa-gamepad"><br>Software<br>Engineering</i>
+                            </div>
+                            <div class="baksideFlip1">
+                                <p class="overskriftFlipCard">Software Engineering</p>
+                                    <i class="fas fa-plus">Advancing Computer Science</i>
+                                    <i class="fas fa-plus">Artificial Intelligence</i>
+                                    <i class="fas fa-plus">Date Science</i>
+                                    <i class="fas fa-plus">Software Engineering (MS)</i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
         </div>
 
