--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -242,7 +242,7 @@ INNOVATE.<br>
 
 <!--DIV som inneholder sidebildet-->
         <div class="slide2sideBildet">
-
+            <img class="slide2pic" src="Images/slide2SidePic.jpg">
         </div>
     </div>
     <div class="sideSlide3">
