Oppdatert nye bilder sammen med gjort ferdig Bilde-info-meny

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -226,7 +226,7 @@ INNOVATE.<br>
                     <div class="flipCard6">
                         <div class="flipCardInner6">
                             <div class="cards2">
-                                <i class="cards fas fa-gamepad"><br>Software<br>Engineering</i>
+                                <i class="cards fas fa-cogs"><br>Software<br>Engineering</i>
                             </div>
                             <div class="baksideFlip1">
                                 <p class="overskriftFlipCard">Software Engineering</p>
@@ -245,9 +245,78 @@ INNOVATE.<br>
             <img class="slide2pic" src="Images/slide2SidePic.jpg">
         </div>
     </div>
+
+<!--Hovedside nr 2-->
     <div class="sideSlide3">
 <!--Pil for scroll venstre--->
         <div class="arrowLeft1" onclick="leftScroll1()"><i class="slide fas fa-arrow-left"></i></div>
+
+<!--DIV for slagord siste side-->
+        <div class="slagOrdSlide3">
+            <i class="shapeTomo">Shaping tomorrow.</i><br>
+            <span class="changeToday">Changing today.</span>
+        </div>
+
+<!--DIV for bilder med info-->
+        <div class="bildeMenyInfo">
+
+            <a href="#" class="bildeInfo1">
+                <span class="infoOverBilde">An interview with a student […]</span>
+            </a>
+
+            <a href="#" class="bildeInfo2">
+                <span class="infoOverBilde">Photoshoot with a student […]</span>
+            </a>
+
+            <a href="#" class="bildeInfo3">
+                <span class="infoOverBilde">Join UAT firefighters […]</span>
+            </a>
+
+            <a href="#" class="bildeInfo4">
+                <span class="infoOverBilde">Tour in the new UAT building […]</span>
+            </a>
+
+            <a href="#" class="bildeInfo5">
+                <span class="infoOverBilde">Portrait photos with a proffesional […]</span>
+            </a>
+
+            <a href="#" class="bildeInfo6">
+                <span class="infoOverBilde">Climbing with Kilian Jornet […]</span>
+            </a>
+
+        </div>
+
+<!--SPAN med FOLLOW US og PIL til sosiale medier
+        <span class="followUs">
+            Follow us <i class="fas fa-arrow-down"></i>
+        </span>
+
+<!--SPAN med FOLLOW US og PIL til sosiale medier
+        <div class="slide3Meny">
+                <img src="Images/UAT_logo.png">
+
+            <ul class="ulMeny3">
+                    <li class="slide3menyPunkt">2625 W. BASELINE RD. TEMPE, AZ 85283-1056</li>
+                    <li class="slide3menyPunkt">(800) 658-5744</li>
+                    <li class="slide3menyPunkt">Degrees</li>
+                    <li class="slide3menyPunkt">Admission</li>
+                    <li class="slide3menyPunkt">Academics</li>
+                    <li class="slide3menyPunkt">Student Experience</li>
+                    <li class="slide3menyPunkt">About UAT</li>
+                    <li class="slide3menyPunkt">News & Events</li>
+                    <li class="slide3menyPunkt">Careers</li>
+                    <li class="slide3menyPunkt">Apply</li>
+                    <li class="slide3menyPunkt">Request Info</li>
+            </ul>
+        </div>
+
+        <span class="slide3menyBunn">
+            &copy;2020 University of Advancing Technology <br>
+            All Rights Reserved <br>
+            Online Brand by FabCom
+        </span>
+-->
+
     </div>
 </div>
 </body>
