Fikset siste slide. Mangler nå bare meny på første venstre side, også gjøre den responsiv. @media

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -33,6 +33,8 @@ INNOVATE.<br>
 <!--Hele siden 300vw til høyre-->
 <div class="innholdSide">
 
+<!----------------------------------------------------------------------------------->
+
  <!--Hovedside nr 1-->
     <div class="sideSlide1">
 
@@ -135,6 +137,8 @@ INNOVATE.<br>
                 </div>
 
         </div>
+
+<!----------------------------------------------------------------------------------->
 
 <!--Hovedside nr 2-->
     <div class="sideSlide2">
@@ -242,11 +246,13 @@ INNOVATE.<br>
 
 <!--DIV som inneholder sidebildet-->
         <div class="slide2sideBildet">
-            <img class="slide2pic" src="Images/slide2SidePic.jpg">
+            <img class="slide2pic" src="Images/slide2SidePic.jpg" alt="side 2 slide">
         </div>
     </div>
 
-<!--Hovedside nr 2-->
+<!----------------------------------------------------------------------------------->
+
+<!--Hovedside nr 3-->
     <div class="sideSlide3">
 <!--Pil for scroll venstre--->
         <div class="arrowLeft1" onclick="leftScroll1()"><i class="slide fas fa-arrow-left"></i></div>
@@ -261,43 +267,56 @@ INNOVATE.<br>
         <div class="bildeMenyInfo">
 
             <a href="#" class="bildeInfo1">
-                <span class="infoOverBilde">An interview with a student […]</span>
+                <span class="infoOverBilde">An interview with a student<br>[…]</span>
             </a>
 
             <a href="#" class="bildeInfo2">
-                <span class="infoOverBilde">Photoshoot with a student […]</span>
+                <span class="infoOverBilde">Photoshoot with a student<br>[…]</span>
             </a>
 
             <a href="#" class="bildeInfo3">
-                <span class="infoOverBilde">Join UAT firefighters […]</span>
+                <span class="infoOverBilde">Join UAT firefighters<br>[…]</span>
             </a>
 
             <a href="#" class="bildeInfo4">
-                <span class="infoOverBilde">Tour in the new UAT building […]</span>
+                <span class="infoOverBilde">Tour in the new UAT building<br>[…]</span>
             </a>
 
             <a href="#" class="bildeInfo5">
-                <span class="infoOverBilde">Portrait photos with a proffesional […]</span>
+                <span class="infoOverBilde">Portrait photos with a proffesional<br>[…]</span>
             </a>
 
             <a href="#" class="bildeInfo6">
-                <span class="infoOverBilde">Climbing with Kilian Jornet […]</span>
+                <span class="infoOverBilde">Climbing with Kilian Jornet<br>[…]</span>
             </a>
 
         </div>
 
-<!--SPAN med FOLLOW US og PIL til sosiale medier
+<!--DIV men høyreside oversikts-meny-->
+    <div class="slide3MenyContainer">
+
+<!--SPAN med FOLLOW US og PIL til sosiale medier-->
         <span class="followUs">
             Follow us <i class="fas fa-arrow-down"></i>
         </span>
 
-<!--SPAN med FOLLOW US og PIL til sosiale medier
+<!--DIV med sosiale medier-->
+        <div class="sosialeMedier">
+            <i class="sosMed fab fa-facebook"></i>
+            <i class="sosMed fab fa-instagram"></i>
+            <i class="sosMed fab fa-twitter"></i>
+            <i class="sosMed fab fa-linkedin-in"></i>
+            <i class="sosMed fab fa-youtube"></i>
+            <i class="sosMed fab fa-snapchat"></i>
+            <i class="sosMed fab fa-reddit"></i>
+        </div>
+
         <div class="slide3Meny">
-                <img src="Images/UAT_logo.png">
+                <img src="Images/UAT_logo.png" class="slide3menyLogo" alt="logo">
 
             <ul class="ulMeny3">
-                    <li class="slide3menyPunkt">2625 W. BASELINE RD. TEMPE, AZ 85283-1056</li>
-                    <li class="slide3menyPunkt">(800) 658-5744</li>
+                    <li>2625 W. BASELINE RD. TEMPE, AZ 85283-1056</li>
+                    <li>(800) 658-5744</li>
                     <li class="slide3menyPunkt">Degrees</li>
                     <li class="slide3menyPunkt">Admission</li>
                     <li class="slide3menyPunkt">Academics</li>
@@ -308,16 +327,17 @@ INNOVATE.<br>
                     <li class="slide3menyPunkt">Apply</li>
                     <li class="slide3menyPunkt">Request Info</li>
             </ul>
-        </div>
 
         <span class="slide3menyBunn">
-            &copy;2020 University of Advancing Technology <br>
-            All Rights Reserved <br>
+            &copy;2020 University of Advancing Technology
+            All Rights Reserved
             Online Brand by FabCom
         </span>
--->
 
+        </div>
     </div>
 </div>
+    </div>
+
 </body>
 </html>
