--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -22,10 +22,10 @@ INNOVATE.<br>
     </i>
     <!--Meny listen nederst--->
     <ul class="infoMeny">
-        <li class="infoMenyPunkt"> <a href="#" class="fas fa-info">REQUEST INFO</a> </li>
-        <li class="infoMenyPunkt"> <a href="#"  class="fas fa-phone">(800)658-5744</a> </li>
-        <li class="infoMenyPunkt"> <a href="#"  class="fas fa-paper-plane">APPLY AT UAT</a> </li>
-        <li class="infoMenyPunkt"> <a href="#"  class="fas fa-bars">MENU</a> </li>
+        <li class="infoMenyPunkt"> <a class="fas fa-info">REQUEST INFO</a> </li>
+        <li class="infoMenyPunkt"> <a class="fas fa-phone">(800)658-5744</a> </li>
+        <li class="infoMenyPunkt"> <a class="fas fa-paper-plane">APPLY AT UAT</a> </li>
+        <li class="infoMenyPunkt"> <a class="fas fa-bars">MENU</a> </li>
     </ul>
 
 </div>
@@ -315,8 +315,8 @@ INNOVATE.<br>
                 <img src="Images/UAT_logo.png" class="slide3menyLogo" alt="logo">
 
             <ul class="ulMeny3">
-                    <li>2625 W. BASELINE RD. TEMPE, AZ 85283-1056</li>
-                    <li>(800) 658-5744</li>
+                    <li style="font-size: 2.4vh" >2625 W. BASELINE RD. TEMPE, AZ 85283-1056</li>
+                    <li class="ulMeny3punk1">(800) 658-5744</li>
                     <li class="slide3menyPunkt">Degrees</li>
                     <li class="slide3menyPunkt">Admission</li>
                     <li class="slide3menyPunkt">Academics</li>
