Jobber med sidemenyen. JS funker ikke

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -12,6 +12,22 @@
     <script src="index.js"></script>
 </head>
 <body>
+<!--Menyen på starten til venstre som faller inn-->
+    <div class="sideBarMeny" style="visibility: hidden;">
+        <ul class="sideBarMenyUl">
+                <li class="sideBarMenyLi">Degrees <i class="+ fas fa-plus"></i></li>
+                <li class="sideBarMenyLi">Admissions <i class="+ fas fa-plus"></i></li>
+                <li class="sideBarMenyLi">Academics <i class="+ fas fa-plus"></i></li>
+                <li class="sideBarMenyLi">Student Experience <i class="+ fas fa-plus"></i></li>
+                <li class="sideBarMenyLi">About UAT <i class="+ fas fa-plus"></i></li>
+                <li class="sideBarMenyLi">News & Events <i class="+ fas fa-plus"></i></li>
+                <li class="sideBarMenyLi">Login</li>
+                <li class="sideBarMenyLi">Apply</li>
+                <li class="sideBarMenyLi">Request Info</li>
+                <li class="sideBarMenyLi">(800) 658-5744</li>
+                            <i class="exit fas fa-times"></i>
+        </ul>
+    </div>
 <!--Menyen på starten til venstre som faller inn -->
 <div class="sideBar">
     <a href="index.html"> <img alt="logo" class="logo" src="Images/UAT_logo.png" ></a>
@@ -25,7 +41,7 @@ INNOVATE.<br>
         <li class="infoMenyPunkt"> <a class="fas fa-info">REQUEST INFO</a> </li>
         <li class="infoMenyPunkt"> <a class="fas fa-phone">(800)658-5744</a> </li>
         <li class="infoMenyPunkt"> <a class="fas fa-paper-plane">APPLY AT UAT</a> </li>
-        <li class="infoMenyPunkt"> <a class="fas fa-bars">MENU</a> </li>
+            <li class="infoMenyPunkt1"> <a class="fas fa-bars">MENU</a> </li>
     </ul>
 
 </div>
