Har gjort siden responsiv unde 880px. Bør gjøre litt endringer under 500px, men MÅ ikke. JS scrollLeft har sluttet å funke. Får heller ikke JS sideBarMeny til å funke

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -38,10 +38,10 @@ INNOVATE.<br>
     </i>
     <!--Meny listen nederst--->
     <ul class="infoMeny">
-        <li class="infoMenyPunkt"> <a class="fas fa-info">REQUEST INFO</a> </li>
-        <li class="infoMenyPunkt"> <a class="fas fa-phone">(800)658-5744</a> </li>
-        <li class="infoMenyPunkt"> <a class="fas fa-paper-plane">APPLY AT UAT</a> </li>
-            <li class="infoMenyPunkt1"> <a class="fas fa-bars">MENU</a> </li>
+        <li class="infoMenyPunkt"> <a class="- fas fa-info"><span class="skjulTekst">REQUEST INFO</span></a> </li>
+        <li class="infoMenyPunkt"> <a class="- fas fa-phone"><span class="skjulTekst">(800)658-5744</span></a> </li>
+        <li class="infoMenyPunkt"> <a class="- fas fa-paper-plane"><span class="skjulTekst">APPLY AT UAT</span></a> </li>
+            <li class="infoMenyPunkt1"> <a class="- fas fa-bars"><span class="skjulTekst">MENU</span></a> </li>
     </ul>
 
 </div>
@@ -204,7 +204,7 @@ INNOVATE.<br>
                     </div>
                     <div class="flipCard3">
                         <div class="flipCardInner3">
-                            <div class="cards2">
+                            <div class="cards21">
                                 <i class="cards fas fa-unlock-alt"><br>Cyber<br>Security</i>
                             </div>
                             <div class="baksideFlip1">
@@ -218,7 +218,7 @@ INNOVATE.<br>
                     </div>
                     <div class="flipCard4">
                         <div class="flipCardInner4">
-                            <div class="cards1">
+                            <div class="cards12">
                                 <i class="cards fas fa-palette"><br>Digital<br>Arts</i>
                             </div>
                             <div class="baksideFlip1">
@@ -330,9 +330,12 @@ INNOVATE.<br>
         <div class="slide3Meny">
                 <img src="Images/UAT_logo.png" class="slide3menyLogo" alt="logo">
 
+            <ul class="ulMenyInfo">
+                <li class="ulMeny3punk1">2625 W. BASELINE RD. TEMPE, AZ 85283-1056</li>
+                <li class="ulMeny3punk1">(800) 658-5744</li>
+            </ul>
+
             <ul class="ulMeny3">
-                    <li style="font-size: 2.4vh" >2625 W. BASELINE RD. TEMPE, AZ 85283-1056</li>
-                    <li class="ulMeny3punk1">(800) 658-5744</li>
                     <li class="slide3menyPunkt">Degrees</li>
                     <li class="slide3menyPunkt">Admission</li>
                     <li class="slide3menyPunkt">Academics</li>
