Gjort responsiv under 885px. For 100% mangler meny sideBar og responsiv under 500px (100vw hvert element)

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -8,7 +8,7 @@
     <!--Henter ikoner fra bibliotek-->
     <script src="https://kit.fontawesome.com/48a8e80ce3.js" crossorigin="anonymous"></script>
 
-    <!--Henter javascript-filen som sørger for at sideBaren kollapser når bruker scroller-->
+    <!--Henter javascript-filen-->
     <script src="index.js"></script>
 </head>
 <body>
@@ -103,7 +103,6 @@ INNOVATE.<br>
             <li class="theDegrees">Technology Studies</li>
             <li class="theDegrees">Technology Forensics</li>
         </div>
-
     </div>
 
     <!--Nedre info-meny på første hovedside--->
