Lagd ferdig nettside. Lagd ferdig SeeCorrectMake.

--- a/SeeCorrectMake/Nettsiden/src/index.html
+++ b/SeeCorrectMake/Nettsiden/src/index.html
@@ -12,22 +12,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-<!--Menyen på starten til venstre som faller inn-->
-    <div class="sideBarMeny" style="visibility: hidden;">
-        <ul class="sideBarMenyUl">
-                <li class="sideBarMenyLi">Degrees <i class="+ fas fa-plus"></i></li>
-                <li class="sideBarMenyLi">Admissions <i class="+ fas fa-plus"></i></li>
-                <li class="sideBarMenyLi">Academics <i class="+ fas fa-plus"></i></li>
-                <li class="sideBarMenyLi">Student Experience <i class="+ fas fa-plus"></i></li>
-                <li class="sideBarMenyLi">About UAT <i class="+ fas fa-plus"></i></li>
-                <li class="sideBarMenyLi">News & Events <i class="+ fas fa-plus"></i></li>
-                <li class="sideBarMenyLi">Login</li>
-                <li class="sideBarMenyLi">Apply</li>
-                <li class="sideBarMenyLi">Request Info</li>
-                <li class="sideBarMenyLi">(800) 658-5744</li>
-                            <i class="exit fas fa-times"></i>
-        </ul>
-    </div>
+
 <!--Menyen på starten til venstre som faller inn -->
 <div class="sideBar">
     <a href="index.html"> <img alt="logo" class="logo" src="Images/UAT_logo.png" ></a>
@@ -167,6 +152,11 @@ INNOVATE.<br>
                 <span class="hovedSideOverskrift">Find your fit<br></span>
                 <i class="underSideOverskrift">Explore our degrees</i>
             </span>
+        </div>
+
+<!--Info-tekst om info-cards-->
+        <div class="infoTekstCards">
+            <span class="cardsTekst">Hover over the cards <br> to see degrees</span>
         </div>
 
 <!--DIV som inneholder DIV med degree-kortene (som flippes)-->
