Begynt på challenge site. JS på active link funker ikke

--- a/FinalProjectExample/src/index.html
+++ b/FinalProjectExample/src/index.html
@@ -39,6 +39,7 @@
 <!--CONTAINER CHALLENGE-->
     <div id="challengeSite">
 
+        <!--Image down right-->
         <img class="challengeSiteTreePic" src="Images/background_tree.jpeg" alt="Dead Tree">
     </div>
 </body>
