Lagd ferdig forside og navbar. Jobber med slide 2 og sideslidsene med meny. skal gjøre det identisk på slide 3 og 4 også

--- a/FinalProjectExample/src/index.html
+++ b/FinalProjectExample/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Final Project Example</title>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
 </head>
 <body>
 <!--HEADER-->
@@ -14,10 +15,10 @@
         </span></a>
         <!--MENU-->
         <ul class="headerMenu">
-            <li class="menuLi active"> <a href="#mainSite"> Home </a> </li>
-            <li class="menuLi"> <a href="#challengeSite"> Challenge </a> </li>
-            <li class="menuLi"> <a href="#"> Solution </a> </li>
-            <li class="menuLi"> <a href="#"> App </a> </li>
+            <li class="menuLi main"> <a href="#mainSite"> Home </a> </li>
+            <li class="menuLi challenge"> <a href="#challengeSite"> Challenge </a> </li>
+            <li class="menuLi solution"> <a href="#solutionSite"> Solution </a> </li>
+            <li class="menuLi app"> <a href="#appSite"> App </a> </li>
         </ul>
     </header>
 
@@ -39,8 +40,61 @@
 <!--CONTAINER CHALLENGE-->
     <div id="challengeSite">
 
+    <!--CONTAINER CHALLENGE SITE 1-->
+        <div id="challengeSite1">
+
+            <!--Menu Challenge site 1-->
+                <ul class="challengeSite1Menu">
+                    <li class="site1MenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
+                    <li class="site1MenuLi description"> <a href="#challengeSite2"> Description </a> </li>
+                    <li class="site1MenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
+                </ul>
+
+    <!--Text-box on site-->
+        <span class="infoTextChallenge">
+
+            <i class="infoTextHeadline">Challenge Intro</i>
+
+                <p class="infoText">
+                    Inspirerende Motiverende Innovasjon InspirerendeMotiverende Innovasjon Inspirerende MotiverendeInnovasjonInspirerende MotiverendeInnovasjon Inspirerende Motiverende InnovasjonInspirerendeMotiverende Innovasjon
+                </p>
+
+        </span>
+
         <!--Image down right-->
         <img class="challengeSiteTreePic" src="Images/background_tree.jpeg" alt="Dead Tree">
+        </div>
+
+    <!--CONTAINER CHALLENGE SITE 2-->
+    <div id="challengeSite2">
+        <!--Menu Challenge site 1-->
+        <ul class="challengeSite1Menu">
+            <li class="site1MenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
+            <li class="site1MenuLi description"> <a href="#challengeSite2"> Description </a> </li>
+            <li class="site1MenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
+        </ul>
+        </div>
+
+        <!--CONTAINER CHALLENGE SITE 3-->
+        <div id="challengeSite3">
+            <!--Menu Challenge site 1-->
+            <ul class="challengeSite1Menu">
+                <li class="site1MenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
+                <li class="site1MenuLi description"> <a href="#challengeSite2"> Description </a> </li>
+                <li class="site1MenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
+            </ul>
+        </div>
+
     </div>
+
+<!--CONTAINER SOLUTION-->
+<div id="solutionSite">
+
+</div>
+
+<!--CONTAINER APP-->
+<div id="appSite">
+
+</div>
 </body>
 </html>
