gjort ferdig alle menyene. Mangler JS til site menyene

--- a/FinalProjectExample/src/index.html
+++ b/FinalProjectExample/src/index.html
@@ -44,10 +44,10 @@
         <div id="challengeSite1">
 
             <!--Menu Challenge site 1-->
-                <ul class="challengeSite1Menu">
-                    <li class="site1MenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
-                    <li class="site1MenuLi description"> <a href="#challengeSite2"> Description </a> </li>
-                    <li class="site1MenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
+                <ul class="SiteMenu">
+                    <li class="siteMenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
+                    <li class="siteMenuLi description"> <a href="#challengeSite2"> Description </a> </li>
+                    <li class="siteMenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
                 </ul>
 
     <!--Text-box on site-->
@@ -67,21 +67,21 @@
 
     <!--CONTAINER CHALLENGE SITE 2-->
     <div id="challengeSite2">
-        <!--Menu Challenge site 1-->
-        <ul class="challengeSite1Menu">
-            <li class="site1MenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
-            <li class="site1MenuLi description"> <a href="#challengeSite2"> Description </a> </li>
-            <li class="site1MenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
-        </ul>
-        </div>
+            <!--Menu Challenge site 1-->
+            <ul class="SiteMenu">
+                <li class="siteMenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
+                <li class="siteMenuLi description"> <a href="#challengeSite2"> Description </a> </li>
+                <li class="siteMenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
+            </ul>
+            </div>
 
         <!--CONTAINER CHALLENGE SITE 3-->
         <div id="challengeSite3">
             <!--Menu Challenge site 1-->
-            <ul class="challengeSite1Menu">
-                <li class="site1MenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
-                <li class="site1MenuLi description"> <a href="#challengeSite2"> Description </a> </li>
-                <li class="site1MenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
+            <ul class="SiteMenu">
+                <li class="siteMenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
+                <li class="siteMenuLi description"> <a href="#challengeSite2"> Description </a> </li>
+                <li class="siteMenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
             </ul>
         </div>
 
@@ -90,10 +90,73 @@
 <!--CONTAINER SOLUTION-->
 <div id="solutionSite">
 
+    <!--CONTAINER CHALLENGE SITE 1-->
+    <div id="solutionSite1">
+
+        <!--Menu Challenge site 1-->
+        <ul class="SiteMenu">
+            <li class="siteMenuLi intro"> <a href="#solutionSite1"> Intro </a> </li>
+            <li class="siteMenuLi description"> <a href="#solutionSite2"> Description </a> </li>
+            <li class="siteMenuLi visibility"> <a href="#solutionSite3"> Visibility in Society </a></li>
+        </ul>
+
+    </div>
+
+    <!--CONTAINER CHALLENGE SITE 2-->
+    <div id="solutionSite2">
+        <!--Menu Challenge site 1-->
+        <ul class="SiteMenu">
+            <li class="siteMenuLi intro"> <a href="#solutionSite1"> Intro </a> </li>
+            <li class="siteMenuLi description"> <a href="#solutionSite2"> Description </a> </li>
+            <li class="siteMenuLi visibility"> <a href="#solutionSite3"> Visibility in Society </a></li>
+        </ul>
+    </div>
+
+    <!--CONTAINER CHALLENGE SITE 3-->
+    <div id="solutionSite3">
+        <!--Menu Challenge site 1-->
+        <ul class="SiteMenu">
+            <li class="siteMenuLi intro"> <a href="#solutionSite1"> Intro </a> </li>
+            <li class="siteMenuLi description"> <a href="#solutionSite2"> Description </a> </li>
+            <li class="siteMenuLi visibility"> <a href="#solutionSite3"> Visibility in Society </a></li>
+        </ul>
+    </div>
 </div>
 
 <!--CONTAINER APP-->
 <div id="appSite">
+    <!--CONTAINER CHALLENGE SITE 1-->
+    <div id="appSite1">
+
+        <!--Menu Challenge site 1-->
+        <ul class="SiteMenu">
+            <li class="siteMenuLi intro"> <a href="#appSite1"> Intro </a> </li>
+            <li class="siteMenuLi description"> <a href="#appSite2"> Description </a> </li>
+            <li class="siteMenuLi visibility"> <a href="#appSite3"> Visibility in Society </a></li>
+        </ul>
+
+    </div>
+
+    <!--CONTAINER CHALLENGE SITE 2-->
+    <div id="appSite2">
+        <!--Menu Challenge site 1-->
+        <ul class="SiteMenu">
+            <li class="siteMenuLi intro"> <a href="#appSite1"> Intro </a> </li>
+            <li class="siteMenuLi description"> <a href="#appSite2"> Description </a> </li>
+            <li class="siteMenuLi visibility"> <a href="#appSite3"> Visibility in Society </a></li>
+        </ul>
+    </div>
+
+    <!--CONTAINER CHALLENGE SITE 3-->
+    <div id="appSite3">
+        <!--Menu Challenge site 1-->
+        <ul class="SiteMenu">
+            <li class="siteMenuLi intro"> <a href="#appSite1"> Intro </a> </li>
+            <li class="siteMenuLi description"> <a href="#appSite2"> Description </a> </li>
+            <li class="siteMenuLi visibility"> <a href="#appSite3"> Visibility in Society </a></li>
+        </ul>
+    </div>
+
 
 </div>
 </body>
