Lagd ferdig layout. Ønsker active funksjon på site-navbar, og kanskje pil som scroller høyre på sidene.

--- a/FinalProjectExample/src/index.html
+++ b/FinalProjectExample/src/index.html
@@ -16,9 +16,9 @@
         <!--MENU-->
         <ul class="headerMenu">
             <li class="menuLi main"> <a href="#mainSite"> Home </a> </li>
-            <li class="menuLi challenge"> <a href="#challengeSite"> Challenge </a> </li>
-            <li class="menuLi solution"> <a href="#solutionSite"> Solution </a> </li>
-            <li class="menuLi app"> <a href="#appSite"> App </a> </li>
+            <li class="menuLi challenge"> <a href="#challengeSite1"> Challenge </a> </li>
+            <li class="menuLi solution"> <a href="#solutionSite1"> Solution </a> </li>
+            <li class="menuLi app"> <a href="#appSite1"> App </a> </li>
         </ul>
     </header>
 
@@ -45,9 +45,9 @@
 
             <!--Menu Challenge site 1-->
                 <ul class="SiteMenu">
-                    <li class="siteMenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
-                    <li class="siteMenuLi description"> <a href="#challengeSite2"> Description </a> </li>
-                    <li class="siteMenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
+                    <li class="siteMenuLi intro 1"> <a href="#challengeSite1"> Intro </a> </li>
+                    <li class="siteMenuLi description 2"> <a href="#challengeSite2"> Description </a> </li>
+                    <li class="siteMenuLi visibility 3"> <a href="#challengeSite3"> Visibility in Society </a></li>
                 </ul>
 
     <!--Text-box on site-->
@@ -69,21 +69,37 @@
     <div id="challengeSite2">
             <!--Menu Challenge site 1-->
             <ul class="SiteMenu">
-                <li class="siteMenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
-                <li class="siteMenuLi description"> <a href="#challengeSite2"> Description </a> </li>
-                <li class="siteMenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
+                <li class="siteMenuLi intro 1"> <a href="#challengeSite1"> Intro </a> </li>
+                <li class="siteMenuLi description 2"> <a href="#challengeSite2"> Description </a> </li>
+                <li class="siteMenuLi visibility 3"> <a href="#challengeSite3"> Visibility in Society </a></li>
             </ul>
-            </div>
+
+        <!--Text-box-->
+        <div class="challengeSite2Description">
+            <span class="site2DescHeadline">Description</span>
+                <p class="site2DescInfo">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sed libero aliquet, accumsan sem nec, iaculis erat. Etiam eleifend mattis metus, a maximus nunc imperdiet non. Nunc sit amet pulvinar lorem, a pellentesque tortor. Mauris commodo tincidunt metus, in sollicitudin tortor posuere eget. Nullam dignissim, ligula id consequat auctor, leo velit rhoncus nisl, quis viverra eros elit at felis. In vitae diam interdum, cursus justo pellentesque, dapibus arcu. Cras convallis, nunc vel ullamcorper suscipit, orci nunc pellentesque nulla, in varius neque nisi nec massa. Duis at ex et felis convallis pulvinar quis ac purus. Pellentesque vestibulum tristique rhoncus. Proin laoreet sem sit amet ligula mollis facilisis at nec ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Quisque sed auctor augue. Fusce eros dui, auctor vitae maximus eu, cursus a orci. Nunc molestie, tellus eget bibendum sagittis, lectus sem facilisis nibh, ut placerat justo diam ac lacus. Maecenas ultricies auctor eros, quis semper odio varius eu. Vestibulum ac sagittis ante.
+<br>
+                    Mauris tortor ex, hendrerit a elementum nec, pharetra quis nisl. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed vehicula felis pretium elit varius mattis. Etiam ornare lectus nec ante condimentum aliquet. Donec condimentum nunc nec nisi eleifend sodales. Ut sagittis tempor metus. Aliquam venenatis vehicula purus. Sed est nulla, sodales vel ex ut, rutrum malesuada arcu. Mauris vel vulputate quam, et iaculis diam. Fusce dapibus nulla id quam consectetur, non auctor orci convallis.
+                </p>
+
+            <!--Image down right challenge site 2-->
+            <img class="environmentImage" src="Images/climate_change.jpeg" alt="climate change">
+
+        </div>
+    </div>
 
         <!--CONTAINER CHALLENGE SITE 3-->
         <div id="challengeSite3">
             <!--Menu Challenge site 1-->
             <ul class="SiteMenu">
-                <li class="siteMenuLi intro"> <a href="#challengeSite1"> Intro </a> </li>
-                <li class="siteMenuLi description"> <a href="#challengeSite2"> Description </a> </li>
-                <li class="siteMenuLi visibility"> <a href="#challengeSite3"> Visibility in Society </a></li>
+                <li class="siteMenuLi intro 1"> <a href="#challengeSite1"> Intro </a> </li>
+                <li class="siteMenuLi description 2"> <a href="#challengeSite2"> Description </a> </li>
+                <li class="siteMenuLi visibility 3"> <a href="#challengeSite3"> Visibility in Society </a></li>
             </ul>
         </div>
+
+
 
     </div>
 
